styles.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap");
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Roboto", sans-serif;
}

html {
  scroll-behavior: smooth;
}

body {
  max-width: 100vw;
  overflow-x: hidden;
}

nav {
  height: 80px;
  display: flex;
}

img {
  width: 100%;
}

p {
  line-height: 1.5;
}

a {
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

ul {
  display: flex;
}

li {
  list-style-type: none;
}

h1 {
  font-size: 48px;
  color: #7342d6;
  margin-bottom: 24px;
  text-align: center;
}

h2 {
  font-size: 32px;
  margin-bottom: 32px;
  text-align: center;
}

button {
  cursor: pointer;
}

button:active {
  transform: translateY(1px);
}

.btn {
  background-color: #7342d6;
  color: white;
  padding: 12px 24px;
  font-size: 20px;
  border-radius: 4px;
  border: none;
}

.purple {
  color: #7342d6;
}

.logo {
  width: 160px;
}

.nav__container {
  width: 100%;
  max-width: 1200px;
  padding: 0 24px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin: 0 auto;
}

.nav__link {
  margin-left: 16px;
  text-decoration: none;
  font-size: 20px;
  color: #7342d6;
  font-weight: bold;
  padding: 8px;
}

.nav__link:hover {
  text-decoration: underline;
}

.nav__link--primary {
  border: 2px solid #7342d6;
  border-radius: 4px;
}

.nav__link--primary:hover {
  text-decoration: none;
}

.btn__menu {
  background-color: transparent;
  font-size: 40px;
  border: none;
  color: #7342d6;
  display: none;
}

.menu__backdrop {
  position: absolute;
  background-color: #242424;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 100;
  display: flex;
  align-items: center;
  justify-content: center;
  visibility: hidden;
  transition: all 300ms ease;
  opacity: 0;
  transform: translate(100%);
}

.menu--open {
  max-height: 100vh;
  overflow: hidden;
}

.menu--open .menu__backdrop {
  visibility: visible;
  opacity: 1;
  transform: translate(0);
}

.menu__links {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.menu__list {
  padding: 32px 0;
}

.menu__link {
  color: white;
  font-size: 40px;
}

.btn__menu--close {
  position: absolute;
  top: 10px;
  right: 20px;
  padding: 8px;
  color: white;
}

/* 

LANDING

*/

#landing {
  background-color: rgba(115, 66, 214, 0.1);
}

header {
  height: calc(100vh - 80px);
}

.header__container {
  width: 100%;
  max-width: 720px;
  margin: 0 auto;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
}

.header__description {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.header__img--wrapper {
  padding: 0 20px;
  /* Added this after the tutorial to 
  show it over the wave on larger screens */
  z-index: 50;
}

.container {
  padding: 56px 0;
}

.row {
  width: 100%;
  max-width: 1200px; /* capping it */
  margin: 0 auto; /* center horizontally */
}

.row__column {
  display: flex;
  flex-direction: column; /* again in footer */
  align-items: center;
}

.no-cursor {
  cursor: not-allowed; /* needed in footer */
}

/* 

HIGHLIGHTS 

*/

#highlights {
  position: relative;
  max-width: 100vw;
  /* full width L to R, no white line on R */
}

#highlights:after,
#highlights:before {
  background: url("assets/wave.svg");
  content: "";
  position: absolute;
  width: 101vw;
  height: 12vw;
  left: 0;
  z-index: 1;
  background-size: cover; /* all the way l to r */
  background-repeat: no-repeat;
}

#highlights:before {
  transform: translateY(-100%); /* move up 100% */
  top: 1px;
}

#highlights:after {
  transform: translateY(100%) rotate(180deg); /* move down 100% and flip */
  bottom: 1px;
}

.highlight__wrapper {
  display: flex;
  flex-wrap: wrap; /* needed for small @media */
}

.highlight {
  padding: 0 24px;
  width: calc(100% / 3);
  display: flex; /* exactly 1/3 */
  align-items: center; /* each        */
  flex-direction: column; /* block       */
}

.highlight__para {
  text-align: center;
  max-width: 280px;
}

.highlight__img {
  border: 2px solid #7342d65d;
  color: #7342d6;
  width: 100px;
  height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 4px;
  font-size: 32px;
  margin-bottom: 24px;
}

.highlight__subtitle {
  font-size: 20px;
  margin-bottom: 16px;
  text-align: center;
}

/* 

FEATURES 

*/

#features {
  padding-top: 8vw; /* little room on top of the features */
  background-color: rgba(115, 66, 214, 0.1);
}

.books {
  display: flex;
  flex-wrap: wrap; /* nice trick */
}

.book {
  width: 25%;
  padding: 24px;
}

.book__img {
  max-height: 380px;
  transition: all 300ms ease;
  cursor: not-allowed; /* book moves but can not click on it */
}

.book__img--wrapper {
  margin-bottom: 8px;
  border-radius: 4px;
  overflow: hidden;
  display: flex;
}

.book:hover .book__img {
  transform: scale(1.03);
}

.book__title {
  font-size: 20px;
  margin-bottom: 8px;
}

.book__title:hover {
  text-decoration: underline;
  cursor: not-allowed;
}

.book__ratings {
  margin-bottom: 8px;
  color: #fabf2a; /* gold fas star */
}

.book__price--normal {
  text-decoration: line-through;
  padding-right: 6px;
  color: #bfbfbf;
}

/* 

EXPLORE

*/

#explore {
  background-color: rgba(115, 66, 214, 0.1);
}

/* 

FOOTER

*/

footer {
  background-color: #242424;
}
.footer__logo {
  /* to line up the footer */
  display: flex; /* 3 lines a little off  */
} /* so this lines them up */

.footer__logo--img {
  width: 160px;
  filter: grayscale(1) invert(1); /* black to white ~ grayscale = nice */
}

.footer__link,
.footer__copyright {
  color: #fff;
}

.footer__copyright {
  font-size: 10px;
}

.footer__list {
  margin: 20px 0 24px 0; /* ~padding he likes */
}

.footer__link {
  padding: 0 8px;
}

/* SMALL PHONES, TABLETS, LARGE SMARTPHONES */
@media (max-width: 768px) {
  .header__description {
    padding: 0 24px;
  }

  h1 {
    font-size: 40px;
  }

  h2 {
    font-size: 26px;
  }

  button {
    font-size: 18px;
  }

  .book {
    width: 50%;
  }
}

/* SMALL PHONES, LARGE SMARTPHONES */
@media (max-width: 550px) {
  .btn__menu {
    display: block;
  }

  .nav__links {
    display: none;
  }

  .highlight {
    width: 100%;
    margin-bottom: 24px;
  }

  .highlight:not(:last-child) {
    margin-bottom: 24px;
  }
}

/* for very small screens, phones, whatever */
@media (max-width: 300px) {
  .footer__list {
    display: flex;
    flex-direction: column;
  }
}

